# mdi

./: CMakeLists.txt  MdiChild.cpp  MdiChild.h  MdiMainWindow.cpp  MdiMainWindow.h  MdiMainWindow.ui  aa.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mdi.pro  mdi.qrc
